[tool.poetry]
name = "num"
version = "0.1.0"
description = "Number wizardry"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/num"
repository = "https://github.com/tombulled/num"
keywords = ["python", "num"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
